# battleships

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
client/src/camera/: mod.rs
server/: Cargo.toml
server/src/: main.rs
store/: Cargo.toml
store/src/: lib.rs
store/src/camera/: components.rs  mod.rs
store/src/game_objects/: components.rs  mod.rs  systems.rs
store/src/map/: components.rs  mod.rs  systems.rs
store/src/selection/: components.rs  mod.rs  systems.rs
store/src/ships/: components.rs  mod.rs  systems.rs
ui/: Cargo.toml
ui/src/: lib.rs
