# Enable small amount of opt in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for code
[profile.dev.package."*"]
opt-level = 3

[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }
anyhow = "1.0"
bevy = { version = "0.8", features = ["dynamic"]} # feature dynamic should be disabled before release.
renet = {version = "0.0.9"}
bevy_renet = {version = "0.0.5"}
bincode="1.3.1"
bevy_rapier3d = { version = "0.16.2", features = ["debug-render","simd-stable", "wasm-bindgen"]}
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", rev="108affb36101e0c06fd9a28aa80224323365227d", features = ["bevy_renderer"] }
iyes_loopless = { version = "0.7" }
rand = { version = "0.8" }
