# Enable small amount of opt in debug mode
[provile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for code
[profile.dev.package."*"]
opt-level = 3


[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }
serde= {version = "1", features = ["derive"]}
bincode="1.3.1"
renet = {version = "0.0.9"}
log = { version = "0.4" }
env_logger="0.9.0"
