# Enable small amount of opt in debug mode
[provile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for code
[profile.dev.package."*"]
opt-level = 3

[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
