[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
bevy = { version = "0.9", features = ["dynamic"] }
bincode="1.3.1"
renet = {version = "0.0.10"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
