[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
store = { path = "../store" }
anyhow = "1.0"
bevy = { version = "0.9", features = ["dynamic"]} # feature dynamic should be disabled before release.
kayak_ui = { version = "0.1" }
